# workflow-cccc

./: .dockerignore  .env.example  .gitignore  CCCC_HELP.md  CCCC_STANDUP.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.backend.sh  requirements.txt  workflow.db
backend/: README.md  pyproject.toml  ruff.toml  workflow.db
backend/alembic/: env.py
backend/app/: database.py  event_bus.py  main.py  sse.py  temporal_adapter.py
backend/app/models/: __init__.py  db.py
backend/app/repositories/: __init__.py  batch_job.py  design_job.py  workflow.py  workspace.py
backend/app/routes/: batch.py  batch_schemas.py  design.py  execution.py  filesystem.py  jira.py  templates.py  validation.py  workflows.py  workspace.py
backend/scripts/: demo_analyzer.py  test_figma_pipeline.py
backend/tests/: conftest.py  test_e2e_bugfix.py  test_e2e_loops.py  test_e2e_m9_steps.py  test_e2e_phase3_fixes.py  test_repository_batch_job.py  test_repository_design_job.py  test_routes_batch.py  test_routes_design.py  test_t020_api.py  test_workspace_e2e.py
backend/tests/workflow/: conftest.py  test_batch_activities.py  test_design_nodes.py  test_dynamic_graph.py  test_executor.py  test_failure_detection.py  test_figma_client.py  test_figma_spec_builder.py  test_frame_classifier.py  test_git_isolation.py  test_node_registry.py  test_spec_activities.py  test_spec_analyzer.py  test_spec_merger.py  test_spec_validator.py  test_token_mapping.py
backend/workflow/: claude_cli_wrapper.py  config.py  settings.py  sse.py
backend/workflow/agents/: __init__.py  claude.py
backend/workflow/engine/: executor.py  graph_builder.py
backend/workflow/integrations/: figma_classifiers.py  figma_client.py  figma_converter.py  frame_classifier.py
backend/workflow/mcp_server/: __init__.py  __main__.py  main.py  server.py
backend/workflow/nodes/: __init__.py  agents.py  base.py  design.py  figma_spec_builder.py  figma_utils.py  frame_decomposer.py  llm_utils.py  registry.py  spec_analyzer.py  spec_assembler.py  spec_nodes.py  state.py
backend_fastapi/: Makefile  README.md  alembic.ini  pyproject.toml  workflow.db
backend_fastapi/alembic/: env.py
backend_fastapi/app/: batch_job_repository.py  database.py  db_models.py  main.py  models.py  repository.py  schemas.py  sse.py  storage.py  temporal_adapter.py
backend_fastapi/tests/: test_e2e_batch_bugfix.py  test_e2e_bugfix.py  test_e2e_m9_steps.py  test_e2e_phase3_fixes.py
backend_fastapi/workflow/: __init__.py  activities.py  cccc_client.py  claude_agent.py  config.py  graph.py  logging_config.py  run_demo.py  run_worker.py  sse.py  tracer.py  workflows.py
(+220 files in other folders)
