[project]
name = "workflow-backend"
version = "0.1.0"
description = "Backend for Work-Flow: an open-source developer workflow orchestration platform powered by LangGraph and Temporal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Work-Flow Contributors"},
]
keywords = ["workflow", "orchestration", "langraph", "temporal", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/user/work-flow"
Repository = "https://github.com/user/work-flow"
Issues = "https://github.com/user/work-flow/issues"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "temporalio>=1.6",
  "langgraph>=0.2",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.19",
  "alembic>=1.13",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uvicorn]
factory = false
