[project]
name = "workflow-backend"
version = "0.1.0"
description = "FastAPI backend for workflow operations"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "temporalio>=1.6",
  "langgraph>=0.2",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.19",
  "alembic>=1.13",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workflow*"]

[tool.uvicorn]
factory = false
